# crewride

./: .gitignore  Cargo.toml  README.md  README.zh.md  package.json  pnpm-lock.yaml  tsconfig.json
crates/adapt/: Cargo.toml
crates/adapt/src/: lib.rs  retry.rs  usage.rs
crates/adapt/src/anthropic/: gemini.rs  mod.rs  openai.rs
crates/adapt/src/gemini/: anthropic.rs  mod.rs  openai.rs
crates/adapt/src/openai/: anthropic.rs  gemini.rs  mod.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  tools.rs
crates/agent/src/chat/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/datum/: Cargo.toml
crates/datum/src/: config.rs  lib.rs  record.rs  session.rs
src/: config.rs  handler.rs  handlers.rs  lib.rs  main.rs
src/handlers/: anthropic.rs  gemini.rs  openai.rs
src/handlers/anthropic/: gemini.rs  openai.rs
