[package]
name = "crewride"
version = "0.0.2"
authors = ["fn-a <mr.fna.co@gmail.com>"]
edition = "2024"
repository = "https://github.com/fn-a/crewride"
description = "A high-performance AI proxy service, supporting multiple AI providers (OpenAI, Anthropic, Gemini) with unified API access and cross-provider forwarding capabilities"
license = "MIT"

[dependencies]
axum = "^0.8"  
tokio = { version = "^1.48", features = ["full"] }  
reqwest = { version = "^0.12", features = ["json", "stream"] }  
serde = { version = "^1.0", features = ["derive"] }  
serde_json = "^1.0"  
serde_yaml = "^0.9" 
futures = "^0.3"
chrono = "^0.4"
url = "^2.5"
eventsource-stream = "^0.2"
anyhow = "^1.0"
aidapter = "0.0.2"