[package]
name = "crewride"
version = "0.0.2"
authors = ["fn-a <mr.fna.co@gmail.com>"]
edition = "2024"
repository = "https://github.com/fn-a/crewride"
description = "A high-performance AI proxy service, supporting multiple AI providers (OpenAI, Anthropic, Gemini) with unified API access and cross-provider forwarding capabilities"
license = "MIT"

[workspace]
members = [
    "crates/adapt", "crates/datum"
]
resolver = "3"

[workspace.dependencies]
axum = "^0.8"
tokio = { version = "^1.48", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
futures = "^0.3"
chrono = "^0.4"
url = { version = "^2.5", features = ["serde"] }
anyhow = "^1.0"
aidapter = "0.0.3"
adapt = { path = "crates/adapt" }
datum = { path = "crates/datum" }

[dependencies]
adapt = { workspace = true }
datum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
aidapter = { workspace = true }
