[package]
name = "agent"
version = "0.0.2"
authors = ["fn-a <mr.fna.co@gmail.com>"]
edition = "2024"

[dependencies]
datum = { workspace = true }
adapt = { workspace = true }
axum = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
aidapter = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
eventsource-stream = { workspace = true }
