[package]
name = "datum"
version = "0.0.2"
authors = ["fn-a <mr.fna.co@gmail.com>"]
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aidapter = { workspace = true }